--- a/IAB251_WPF_ASS2.csproj
+++ b/IAB251_WPF_ASS2.csproj
@@ -64,6 +64,9 @@
     <Compile Include="CustomerRegistration.xaml.cs">
       <DependentUpon>CustomerRegistration.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CustomerViewQuotation.xaml.cs">
+      <DependentUpon>CustomerViewQuotation.xaml</DependentUpon>
+    </Compile>
     <Compile Include="EmployeeLogin.xaml.cs">
       <DependentUpon>EmployeeLogin.xaml</DependentUpon>
     </Compile>
@@ -95,6 +98,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="CustomerRegistration.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CustomerViewQuotation.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
